--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,18 @@
+.hints-body {
+    position: relative;
+}
 
+.prev-button {
+    position: absolute;
+    height: 80%;
+    left: 10px;
+    width: 30px;
+    opacity: 0.8;
+}
+.next-button {
+    position: absolute;
+    height: 80%;
+    right: 10px;
+    width: 30px;
+    opacity: 0.8;
+}
